--- a/StarterMobileFlutter/pubspec.yaml
+++ b/StarterMobileFlutter/pubspec.yaml
@@ -28,11 +28,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  http: ^0.13.3
-  provider: ^6.0.0
-  device_info: ^2.0.2
-  shared_preferences: ^2.0.7
-  intl: ^0.17.0
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
