--- a/StarterMobileFlutter/android/app/src/main/AndroidManifest.xml
+++ b/StarterMobileFlutter/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.my_first_app">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.ecommerce">
    <application
-        android:label="my_first_app"
+        android:label="ecommerce"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
