--- a/StarterMobileFlutter/pubspec.yaml
+++ b/StarterMobileFlutter/pubspec.yaml
@@ -36,8 +36,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   # Google Fonts
   google_fonts: ^2.1.0
+
   # Slider Carousel
   carousel_slider: ^4.0.0
+ 
+  # Provider
+  provider: ^5.0.0
+
+  # Http
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
